--- a/StartVk/app/src/main/res/values/strings.xml
+++ b/StartVk/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">StartVk</string>
     <integer name="com_vk_sdk_AppId">6180100</integer>
+    <string name="news_feed">News</string>
+
+
+    <string name="font_heart">&#xE87D;</string>
+    <string name="font_comment">&#xE0B9;</string>
+    <string name="font_repost">&#xE050;</string>
 </resources>
